feat(server): add forget password feat
